# mucheck

./: .gitignore  LICENSE  Main.hs  Makefile  MuCheck.cabal  README.md  changes.md  mucheck.cabal  old.md  package.yaml  todo.md
Examples/: AssertCheckTest.hs  HUnitTest.hs  Main.hs  Permutation.hs  QuickCheckTest.hs  Quicksort.hs  SampleCode.hs  SmallCheckTest.hs
MuCheck/: Interpreter.hs  MuOp.hs  Mutation.hs  Operators.hs  StdArgs.hs  Utils.hs
MuCheck/Utils/: Common.hs  Print.hs  Syb.hs
TestSubjects/: AVL.hs
src/: Main.hs
src/MuCheck/: Config.hs  Interpreter.hs  MuOp.hs  Mutation.hs  Operators.hs  StdArgs.hs  Utils.hs
src/MuCheck/Run/: Common.hs  HUnit.hs  Hspec.hs  QuickCheck.hs
src/MuCheck/Utils/: Common.hs  Print.hs  Syb.hs
src/Test/: MuCheck.hs
src/Test/MuCheck/: AnalysisSummary.hs  Config.hs  Interpreter.hs  MuOp.hs  Mutation.hs  Operators.hs  TestAdapter.hs  Tix.hs
src/Test/MuCheck/Run/: Common.hs  HUnit.hs  Hspec.hs  QuickCheck.hs  SmallCheck.hs
src/Test/MuCheck/TestAdapter/: AssertCheck.hs  AssertCheckAdapter.hs  QuickCheck.hs
src/Test/MuCheck/Utils/: Common.hs  Helpers.hs  Print.hs  Syb.hs
support/: HLint.hs
test/: Here.hs  Spec.hs
test/MuCheck/Utils/: CommonSpec.hs  PrintSpec.hs
test/Test/MuCheck/: MutationSpec.hs
test/Test/MuCheck/MutationSpec/: Helpers.hs
test/Test/MuCheck/Utils/: CommonSpec.hs  PrintSpec.hs  SybSpec.hs
