name:                MuCheck
version:             0.1.0.0
synopsis:            Automated Mutation Testing
-- description:         
homepage:            https://bitbucket.com/osu-testing/mucheck
license:             GPL-2
license-file:        LICENSE
author:              Duc Lee
maintainer:          ledu@onid.oregonstate.edu
-- copyright:           
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: MuCheck.MuOp, MuCheck.StdArgs, MuCheck.Interpreter, MuCheck.Mutation, MuCheck.Operators, MuCheck.Utils.Syb, MuCheck.Utils.Common, MuCheck.Utils.Print
  -- other-modules:       
  build-depends:       base >=4.5, haskell-src-exts >=1.13, syb >= 0.4.0, time >= 1.4.0.1, QuickCheck>=2.6, hint >= 0.3.1.0, mtl>=2.1.2, HUnit >= 1.0
